# Proxy-desktop-browser

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  CHANGELOG.md  CODEBASE_UNDERSTANDING.md  CODING_EFFICIENCY.md  COMPLETE_TECH_STACK_UPDATE_SUMMARY.md  COMPREHENSIVE_DEVELOPMENT_PLAN.md  Cargo.toml  DEVELOPER_QUICKREF.md  DEVELOPMENT_PHASES.md  FINAL_PROJECT_INDEX.md  FIX_SUMMARY.md  GETTING_STARTED.md  GH_CLI_SETUP.md  IMPLEMENTATION_CHECKLIST.md  IMPROVEMENTS.md  MASTER_INDEX.md  OPTIMIZED_TECH_STACK_SETUP.md  PHASE_5_UI_COMPONENTS.md  PHASE_6_ADVANCED_FEATURES.md  PHASE_7_TESTING_SECURITY.md  PHASE_8_DEPLOYMENT.md  PROJECT_SUMMARY.md  PROXY_PROVIDERS_DETAILED.md  QUICKSTART_GUIDE.md  README.md  README_COMPREHENSIVE_PLAN.md  START_HERE.md  TECH_STACK_ANALYSIS.md  TECH_STACK_FINAL_DECISION.md  TECH_STACK_RECOMMENDATION.md  TECH_STACK_RESEARCH_SUMMARY.md  UPDATED_PROMPTS_OPTIMIZED_STACK.md  UPDATED_PROMPTS_PHASE_3.md  V1000_EXPERIMENTAL_DEEP_PLAN.md  V1000_UPGRADE_DEEP_PLAN.md  WINDSURF_USAGE_GUIDE.md  docs.md  docs_formatted.md  docs_raw.txt  (+1 more)
.github/agents/: agent.md  my-agent.agent.md
.github/workflows/: build-windows.yml
crates/api-server/: Cargo.toml
crates/api-server/src/: lib.rs  main.rs
crates/api-server/tests/: api_routes.rs
crates/browser-core/: Cargo.toml
crates/browser-core/migrations/: 001_initial_schema.sql
crates/browser-core/src/: ad_verification.rs  automation.rs  backup.rs  browser_controls.rs  browser_tab_manager.rs  chromium_engine.rs  config_manager.rs  content_enhancement.rs  database.rs  error_recovery.rs  experimental.rs  fingerprint.rs  free_ip_providers.rs  http_client.rs  lib.rs  local_proxy.rs  memory_profiler.rs  network_intelligence.rs  pac_server.rs  performance_optimizer.rs  prelude.rs  privacy_fortress.rs  proxy.rs  proxy_rotation.rs  proxy_validator.rs  request.rs  scraper_util.rs  security.rs  storage.rs  tab_isolation.rs  tab_manager.rs  webview_manager.rs
crates/browser-core/src/content_enhancement/: accessibility.rs  content_transformer.rs  language_detector.rs  manager.rs  media_player.rs  mod.rs  reader_mode.rs  text_analyzer.rs
crates/browser-core/src/efficiency/: async_executor.rs  buffer_pool.rs  cache_manager.rs  connection_pool.rs  cpu_optimizer.rs  memory_optimizer.rs  mod.rs
crates/browser-core/tests/: ad_verification_tests.rs  automation_tests.rs  backup_tests.rs  browser_controls_tests.rs  content_enhancement_tests.rs  error_recovery_tests.rs  experimental_tests.rs  fingerprint_tests.rs  free_ip_providers_tests.rs  http_client_tests.rs  local_proxy_tests.rs  memory_profiler_tests.rs  network_intelligence_tests.rs  network_interception_tests.rs  network_privacy_tests.rs  pac_server_tests.rs  performance_optimizer_tests.rs  privacy_fortress_tests.rs  provider_tests.rs  proxy_rotation_tests.rs  proxy_tests.rs  security_tests.rs  stability_tests.rs  tab_lifecycle.rs  tab_manager_tests.rs  validation_tests.rs  webview_manager_tests.rs
crates/virtual-ip/: Cargo.toml
crates/virtual-ip/src/: generator.rs  lib.rs  models.rs  rotation.rs  validator.rs
scripts/: gh_issue_generator.py
ui-tauri/: bunfig.toml  index.html  package-lock.json  package.json  setup.bat  setup.sh  tsconfig.json
ui-tauri/src/: App.svelte  app.css  index.html
ui-tauri/src-tauri/: Cargo.toml  tauri.conf.json
ui-tauri/src-tauri/capabilities/: default.json
ui-tauri/src-tauri/icons/: create_icon.ps1  icon.icns
ui-tauri/src-tauri/src/: auth.rs  main.rs  webview_manager.rs
ui-tauri/src/components/: CreateTabForm.svelte  MainApp.svelte  TabDetails.svelte  TabList.svelte
ui-tauri/src/components/auth/: AuthWrapper.svelte  LoginForm.svelte  RegisterForm.svelte  UserManagement.svelte
ui-tauri/src/components/browser/: BookmarksPanel.svelte  BrowserShell.svelte  BrowserView.svelte  EnhancedTabList.svelte  HistoryPanel.svelte  NavigationBar.svelte  ProxyPanel.svelte  StatusBar.svelte  TabBar.svelte  WebviewBrowser.svelte
ui-tauri/src/components/config/: BackupRestorePanel.svelte  BrowserSettingsPanel.svelte  FreeIpProvidersPanel.svelte  FreeProxiesPanel.svelte  ProxyConfiguration.svelte  PublicIpPanel.svelte
ui-tauri/src/components/layout/: LeftPanel.svelte  RightPanel.svelte  TwoPanelLayout.svelte
ui-tauri/src/components/ui/: AsyncWrapper.svelte  ErrorBoundary.svelte  LoadingSpinner.svelte  SkeletonLoader.svelte  VirtualList.svelte
ui-tauri/src/lib/: api.ts  connectionPool.ts  errorHandling.ts  persist.ts  settings.ts  shortcuts.ts  stores.ts  types.ts  utils.ts
