[workspace]
resolver = "2"
members = [
    "crates/virtual-ip",
    "crates/browser-core",
    "crates/api-server",
    "ui-tauri/src-tauri",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Virtual IP Browser Team"]

[workspace.dependencies]
# Core Framework - UPGRADED TO 2.0
tauri = { version = "2.0", features = [] }
tauri-build = { version = "2.0", features = [] }

# Async Runtime
tokio = { version = "1.40", features = [
    "macros", 
    "rt-multi-thread", 
    "sync", 
    "time",
    "fs",
    "io-util"
]}

# HTTP Client - UPGRADED with middleware
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "socks",
    "rustls-tls",
    "cookies",
    "stream",
    "gzip",
    "brotli"
]}
reqwest-middleware = "0.3"
reqwest-retry = "0.6"

# Database - SWITCHED TO ASYNC
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "chrono",
    "uuid"
]}

# Web Scraping - NEW
scraper = "0.20"
select = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling - ENHANCED
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
rand = "0.8"
futures = "0.3"
async-trait = "0.1"

# Logging - ENHANCED
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"

# Security - NEW ADDITIONS
keyring = "3.0"
validator = { version = "0.18", features = ["derive"] }
ammonia = "4.0"
governor = "0.6"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"

# Configuration
config = "0.14"

# Web Framework
axum = { version = "0.7", features = ["macros", "json", "ws"] }

# Additional useful crates
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Chromium Engine Integration
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
