[package]
description = "REST API server for Proxy Desktop Browser"
name = "api-server"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Internal dependencies

browser-core = { path = "../browser-core" }
virtual-ip = { path = "../virtual-ip" }

[dev-dependencies]
hyper = "1.4"
