[package]
description = "Core browser functionality with proxy support and privacy features"
name = "browser-core"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# HTTP - UPGRADED
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }

# Web Scraping - NEW
scraper = { workspace = true }
select = { workspace = true }

# Database removed - using in-memory storage


# Security - NEW
keyring = { workspace = true }
validator = { workspace = true }
ammonia = { workspace = true }
governor = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }

# Configuration
config = { workspace = true }

# Async utilities
futures = { workspace = true }
async-trait = { workspace = true }

# Internal dependencies
virtual-ip = { path = "../virtual-ip" }

# Efficiency optimizations
parking_lot = { workspace = true }
rustc-hash = { workspace = true }

# Tauri dependencies (for commands)
tauri = { workspace = true }

# SQLite storage removed - using in-memory storage


# Local proxy server dependencies
# No additional dependencies needed - all available from workspace

# Additional dependencies
url = "2.5"
toml = "0.8"
mime = "0.3"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
num_cpus = "1.16"

# WebSocket Proxy Support
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
native-tls = "0.2"
tokio-native-tls = "0.3"

# Chromium Engine Integration
chromiumoxide = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.4"
tempfile = "3.10"
