[package]
description = "Virtual IP management and rotation for proxy browser"
name = "virtual-ip"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
tracing = { workspace = true }

# Additional dependencies
ipnetwork = "0.20"
trust-dns-resolver = "0.23"

[dev-dependencies]
tokio-test = "0.4"
