[package]
name = "virtual-ip-browser"
version = "1.0.0"
description = "Privacy-focused browser with virtual IP routing"
authors = ["Virtual IP Browser Team"]
license = "MIT OR Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Tauri - UPGRADED TO 2.0
tauri = { workspace = true, features = [
    "rustls-tls"
]}

# Tauri Plugins - NEW
tauri-plugin-store = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-updater = "2.0"

# Internal dependencies
browser-core = { path = "../../crates/browser-core" }
virtual-ip = { path = "../../crates/virtual-ip" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
